src/test/ui/feature-gate-box_patterns.stderr
error[E0658]: box pattern syntax is experimental (see issue #29641)
  --> $DIR/feature-gate-box_patterns.rs:12:9
   |
LL |     let box x = Box::new('c'); //~ ERROR box pattern syntax is experimental
   |         ^^^^^
   |
   = help: add #![feature(box_patterns)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
